Fix the spacing for code with line numbers

--- a/style/style.scss
+++ b/style/style.scss
@@ -735,7 +735,7 @@ blockquote.code {
         text-align: right;
         border-right: 1px solid #bbb;
         padding: 0 .5em 0 0;
-        margin: 0;
+        margin: 0 .5em 0 0;
     }
 
     /* Code styling.  There are a lot of different styles! */
